Script/Parser.cpp
#include "Parser.h"
#include "LibraryManager.h"
#include "Common.h"
#include "Logger.h"
namespace RealSix::Script
{
	struct PrecedenceBinding
	{
		TokenKind kind;
		Precedence precedence;
	};

	constexpr PrecedenceBinding precedenceDict[] = {
		{TokenKind::EQUAL, Precedence::ASSIGN},
		{TokenKind::PLUS_EQUAL, Precedence::ASSIGN},
		{TokenKind::MINUS_EQUAL, Precedence::ASSIGN},
		{TokenKind::ASTERISK_EQUAL, Precedence::ASSIGN},
		{TokenKind::SLASH_EQUAL, Precedence::ASSIGN},
		{TokenKind::PERCENT_EQUAL, Precedence::ASSIGN},
		{TokenKind::AMPERSAND_EQUAL, Precedence::ASSIGN},
		{TokenKind::VBAR_EQUAL, Precedence::ASSIGN},
		{TokenKind::CARET_EQUAL, Precedence::ASSIGN},
		{TokenKind::LESS_LESS_EQUAL, Precedence::ASSIGN},
		{TokenKind::GREATER_GREATER_EQUAL, Precedence::ASSIGN},
		{TokenKind::VBAR_VBAR, Precedence::OR},
		{TokenKind::AMPERSAND_AMPERSAND, Precedence::AND},
		{TokenKind::QUESTION, Precedence::CONDITION},
		{TokenKind::VBAR, Precedence::BIT_OR},
		{TokenKind::CARET, Precedence::BIT_XOR},
		{TokenKind::AMPERSAND, Precedence::BIT_AND},
		{TokenKind::EQUAL_EQUAL, Precedence::EQUAL},
		{TokenKind::BANG_EQUAL, Precedence::EQUAL},
		{TokenKind::LESS, Precedence::COMPARE},
		{TokenKind::LESS_EQUAL, Precedence::COMPARE},
		{TokenKind::GREATER, Precedence::COMPARE},
		{TokenKind::GREATER_EQUAL, Precedence::COMPARE},
		{TokenKind::LESS_LESS, Precedence::BIT_SHIFT},
		{TokenKind::GREATER_GREATER, Precedence::BIT_SHIFT},
		{TokenKind::PLUS, Precedence::ADD_PLUS},
		{TokenKind::MINUS, Precedence::ADD_PLUS},
		{TokenKind::ASTERISK, Precedence::MUL_DIV_MOD},
		{TokenKind::SLASH, Precedence::MUL_DIV_MOD},
		{TokenKind::PERCENT, Precedence::MUL_DIV_MOD},
		{TokenKind::LBRACKET, Precedence::INFIX},
		{TokenKind::LPAREN, Precedence::INFIX},
		{TokenKind::DOT, Precedence::INFIX},
		{TokenKind::BANG, Precedence::INFIX},
		{TokenKind::PLUS_PLUS, Precedence::POSTFIX},
		{TokenKind::MINUS_MINUS, Precedence::POSTFIX},
	};

	struct AssociativityBinding
	{
		Precedence precedence;
		Associativity associativity;
	};

	constexpr AssociativityBinding associativityDict[] =
		{
			{Precedence::LOWEST, Associativity::L2R},
			{Precedence::ASSIGN, Associativity::R2L},
			{Precedence::CONDITION, Associativity::L2R},
			{Precedence::OR, Associativity::L2R},
			{Precedence::AND, Associativity::L2R},
			{Precedence::BIT_OR, Associativity::L2R},
			{Precedence::BIT_XOR, Associativity::L2R},
			{Precedence::BIT_AND, Associativity::L2R},
			{Precedence::EQUAL, Associativity::L2R},
			{Precedence::COMPARE, Associativity::L2R},
			{Precedence::BIT_SHIFT, Associativity::L2R},
			{Precedence::ADD_PLUS, Associativity::L2R},
			{Precedence::MUL_DIV_MOD, Associativity::L2R},
			{Precedence::PREFIX, Associativity::R2L},
			{Precedence::INFIX, Associativity::L2R},
			{Precedence::POSTFIX, Associativity::L2R},
	};

	std::unordered_map<TokenKind, PrefixFn> Parser::mPrefixFunctions =
		{
			{TokenKind::IDENTIFIER, &Parser::ParseIdentifierExpr},
			{TokenKind::NUMBER, &Parser::ParseLiteralExpr},
			{TokenKind::STR, &Parser::ParseLiteralExpr},
			{TokenKind::NIL, &Parser::ParseLiteralExpr},
			{TokenKind::TRUE, &Parser::ParseLiteralExpr},
			{TokenKind::FALSE, &Parser::ParseLiteralExpr},
			{TokenKind::CHAR, &Parser::ParseLiteralExpr},
			{TokenKind::MINUS, &Parser::ParsePrefixExpr},
			{TokenKind::TILDE, &Parser::ParsePrefixExpr},
			{TokenKind::BANG, &Parser::ParsePrefixExpr},
			{TokenKind::LPAREN, &Parser::ParseGroupExpr},
			{TokenKind::LBRACKET, &Parser::ParseArrayExpr},
			{TokenKind::LBRACE, &Parser::ParseDictExpr},
			{TokenKind::AMPERSAND, &Parser::ParseRefExpr},
			{TokenKind::FUNCTION, &Parser::ParseLambdaExpr},
			{TokenKind::PLUS_PLUS, &Parser::ParsePrefixExpr},
			{TokenKind::MINUS_MINUS, &Parser::ParsePrefixExpr},
			{TokenKind::NEW, &Parser::ParseNewExpr},
			{TokenKind::THIS, &Parser::ParseThisExpr},
			{TokenKind::BASE, &Parser::ParseBaseExpr},
			{TokenKind::MATCH, &Parser::ParseMatchExpr},
			{TokenKind::LPAREN_LBRACE, &Parser::ParseCompoundExpr},
			{TokenKind::ELLIPSIS, &Parser::ParseVarArgExpr},
			{TokenKind::STRUCT, &Parser::ParseStructExpr},
	};

	std::unordered_map<TokenKind, InfixFn> Parser::mInfixFunctions =
		{
			{TokenKind::EQUAL, &Parser::ParseInfixExpr},
			{TokenKind::PLUS_EQUAL, &Parser::ParseInfixExpr},
			{TokenKind::MINUS_EQUAL, &Parser::ParseInfixExpr},
			{TokenKind::ASTERISK_EQUAL, &Parser::ParseInfixExpr},
			{TokenKind::SLASH_EQUAL, &Parser::ParseInfixExpr},
			{TokenKind::PERCENT_EQUAL, &Parser::ParseInfixExpr},
			{TokenKind::AMPERSAND_EQUAL, &Parser::ParseInfixExpr},
			{TokenKind::VBAR_EQUAL, &Parser::ParseInfixExpr},
			{TokenKind::CARET_EQUAL, &Parser::ParseInfixExpr},
			{TokenKind::LESS_LESS_EQUAL, &Parser::ParseInfixExpr},
			{TokenKind::GREATER_GREATER_EQUAL, &Parser::ParseInfixExpr},
			{TokenKind::QUESTION, &Parser::ParseConditionExpr},
			{TokenKind::VBAR_VBAR, &Parser::ParseInfixExpr},
			{TokenKind::AMPERSAND_AMPERSAND, &Parser::ParseInfixExpr},
			{TokenKind::VBAR, &Parser::ParseInfixExpr},
			{TokenKind::CARET, &Parser::ParseInfixExpr},
			{TokenKind::AMPERSAND, &Parser::ParseInfixExpr},
			{TokenKind::LESS_LESS, &Parser::ParseInfixExpr},
			{TokenKind::GREATER_GREATER, &Parser::ParseInfixExpr},
			{TokenKind::EQUAL_EQUAL, &Parser::ParseInfixExpr},
			{TokenKind::BANG_EQUAL, &Parser::ParseInfixExpr},
			{TokenKind::LESS, &Parser::ParseInfixExpr},
			{TokenKind::LESS_EQUAL, &Parser::ParseInfixExpr},
			{TokenKind::GREATER, &Parser::ParseInfixExpr},
			{TokenKind::GREATER_EQUAL, &Parser::ParseInfixExpr},
			{TokenKind::PLUS, &Parser::ParseInfixExpr},
			{TokenKind::MINUS, &Parser::ParseInfixExpr},
			{TokenKind::ASTERISK, &Parser::ParseInfixExpr},
			{TokenKind::SLASH, &Parser::ParseInfixExpr},
			{TokenKind::PERCENT, &Parser::ParseInfixExpr},
			{TokenKind::LPAREN, &Parser::ParseCallExpr},
			{TokenKind::LBRACKET, &Parser::ParseIndexExpr},
			{TokenKind::DOT, &Parser::ParseDotExpr},
			{TokenKind::BANG, &Parser::ParseFactorialExpr},
	};

	std::unordered_map<TokenKind, PostfixFn> Parser::mPostfixFunctions =
		{
			{TokenKind::PLUS_PLUS, &Parser::ParsePostfixExpr},
			{TokenKind::MINUS_MINUS, &Parser::ParsePostfixExpr},
	};

	Parser::Parser()
		: mCurClassInfo(nullptr), mCurPos(0)
	{
	}

	Parser::~Parser()
	{
		std::unordered_map<TokenKind, PrefixFn>().swap(mPrefixFunctions);
		std::unordered_map<TokenKind, InfixFn>().swap(mInfixFunctions);
	}

	Stmt *Parser::Parse(const std::vector<Token *> &tokens)
	{
		ResetStatus();
		mTokens = tokens;

		AstStmts *astStmts = new AstStmts(GetCurToken());

		while (!IsMatchCurToken(TokenKind::END))
			astStmts->stmts.emplace_back(ParseDeclAndStmt());

		return astStmts;
	}

	void Parser::ResetStatus()
	{
		mCurPos = 0;

		mCurClassInfo = nullptr;
	}

	Decl *Parser::ParseDecl()
	{
		switch (GetCurToken()->kind)
		{
		case TokenKind::LET:
		case TokenKind::CONST:
			return ParseVarDecl();
		case TokenKind::FUNCTION:
			GetCurTokenAndStepOnce();
			return ParseFunctionDecl();
		case TokenKind::CLASS:
			return ParseClassDecl();
		case TokenKind::ENUM:
			return ParseEnumDecl();
		case TokenKind::MODULE:
			return ParseModuleDecl();
		default:
			return nullptr;
		}
	}

	Decl *Parser::ParseVarDecl()
	{
		auto curToken = GetCurToken();
		auto kind = curToken->kind;

		auto varStmt = new VarDecl(curToken);

		if (kind == TokenKind::LET)
			varStmt->permission = Permission::MUTABLE;
		else if (kind == TokenKind::CONST)
			varStmt->permission = Permission::IMMUTABLE;

		Consume(kind, TEXT("Expect 'let' or 'const' key word"));

		do
		{
			if (IsMatchCurToken(TokenKind::LBRACKET))
				varStmt->variables.emplace_back(ParseDestructuringAssignmentExpr());
			else
			{
				auto varDescExpr = ParseVarDescExpr();

				Expr *value = new LiteralExpr(varDescExpr->tagToken);
				if (IsMatchCurTokenAndStepOnce(TokenKind::EQUAL))
					value = ParseExpr();
				varStmt->variables.emplace_back(varDescExpr, value);
			}

		} while (IsMatchCurTokenAndStepOnce(TokenKind::COMMA));

		Consume(TokenKind::SEMICOLON, TEXT("Expect ';' after let or const declaration."));

		return varStmt;
	}

	Decl *Parser::ParseFunctionDecl()
	{
		auto funcStmt = new FunctionDecl(GetCurToken());

		{
			funcStmt->name = (IdentifierExpr *)ParseIdentifierExpr();

			Consume(TokenKind::LPAREN, TEXT("Expect '(' after 'fn' keyword"));

			if (!IsMatchCurToken(TokenKind::RPAREN)) // has parameter
			{
				do
				{
					funcStmt->parameters.emplace_back((VarDescExpr *)ParseVarDescExpr());
				} while (IsMatchCurTokenAndStepOnce(TokenKind::COMMA));
			}

			Consume(TokenKind::RPAREN, TEXT("Expect ')' after function stmt's '('"));

			std::vector<Type> functionReturnTypes;
			{
				// TODO: parse function return type
				if (IsMatchCurToken(TokenKind::COLON))
				{
					GetCurTokenAndStepOnce();
					do
					{
						auto type = ParseType();
						functionReturnTypes.emplace_back(type);
					} while (IsMatchCurTokenAndStepOnce(TokenKind::COMMA));
				}
			}

			funcStmt->returnTypes = functionReturnTypes;
			funcStmt->body = (ScopeStmt *)ParseScopeStmt();

			// if (funcStmt->body->stmts.back()->kind != AstKind::RETURN && funcStmt->functionKind != FunctionDecl::Kind::CLASS_CONSTRUCTOR)
			// {
			// 	auto tmpReturn = new ReturnStmt(GetCurToken());
			// 	funcStmt->body->stmts.emplace_back(tmpReturn);
			// }
		}

		return funcStmt;
	}

	Decl *Parser::ParseClassDecl()
	{
		auto classStmt = new ClassDecl(GetCurToken());

		Consume(TokenKind::CLASS, TEXT("Expect 'class' keyword"));

		classStmt->name = ((IdentifierExpr *)ParseIdentifierExpr())->literal;

		ClassInfo classInfo;
		classInfo.hasSuperClass = false;
		classInfo.enclosing = mCurClassInfo;
		classInfo.name = classStmt->name;
		mCurClassInfo = &classInfo;

		if (IsMatchCurTokenAndStepOnce(TokenKind::COLON))
		{
			do
			{
				auto privilege = ParseClassMemberPrivilege();
				classStmt->parents.emplace_back(std::make_pair(privilege, (IdentifierExpr *)ParseIdentifierExpr()));
			} while (IsMatchCurTokenAndStepOnce(TokenKind::COMMA));

			mCurClassInfo->hasSuperClass = true;
		}

		Consume(TokenKind::LBRACE, TEXT("Expect '{' after class name or parent class name"));

		while (!IsMatchCurToken(TokenKind::RBRACE))
		{
			auto privilege = ParseClassMemberPrivilege();

			if (IsMatchCurToken(TokenKind::LET) || IsMatchCurToken(TokenKind::CONST))
				classStmt->variables.emplace_back(privilege, (VarDecl *)ParseVarDecl());
			else if (IsMatchCurToken(TokenKind::ENUM))
				classStmt->enumerations.emplace_back(privilege, (EnumDecl *)ParseEnumDecl());
			else if (IsMatchCurTokenAndStepOnce(TokenKind::FUNCTION))
			{
				auto fn = (FunctionDecl *)ParseFunctionDecl();
				if (fn->name->literal == classStmt->name)
					REALSIX_LOG_ERROR_WITH_LOC(fn->name->tagToken, TEXT("The class member function name :{} conflicts with its class:{}, only constructor function name is allowed to same with its class's name"), fn->name->literal);
				classStmt->functions.emplace_back(privilege, std::move(ClassDecl::FunctionMember(ClassDecl::FunctionKind::MEMBER, fn)));
			}
			else if (GetCurToken()->literal == classStmt->name) // constructor
			{
				auto fn = (FunctionDecl *)ParseFunctionDecl();
				classStmt->functions.emplace_back(privilege, std::move(ClassDecl::FunctionMember(ClassDecl::FunctionKind::CONSTRUCTOR, fn)));
			}
			else
				Consume({TokenKind::LET, TokenKind::FUNCTION, TokenKind::CONST}, TEXT("UnExpect identifier '") + GetCurToken()->literal + TEXT("'."));
		}

		Consume(TokenKind::RBRACE, TEXT("Expect '}' after class stmt's '{'"));

		mCurClassInfo = mCurClassInfo->enclosing;

		return classStmt;
	}
	Decl *Parser::ParseEnumDecl()
	{
		auto enumStmt = new EnumDecl(GetCurToken());

		Consume(TokenKind::ENUM, TEXT("Expect 'enum' keyword."));
		enumStmt->name = (IdentifierExpr *)ParseIdentifierExpr();
		Consume(TokenKind::LBRACE, TEXT("Expect '{' after 'enum' keyword."));

		std::unordered_map<IdentifierExpr *, Expr *> items;

		while (!IsMatchCurToken(TokenKind::RBRACE))
		{
			auto name = (IdentifierExpr *)ParseIdentifierExpr();
			Expr *value = new LiteralExpr(name->tagToken, name->literal);
			if (IsMatchCurTokenAndStepOnce(TokenKind::EQUAL))
			{
				SAFE_DELETE(value);
				value = ParseExpr();
			}

			items[name] = value;

			if (IsMatchCurToken(TokenKind::COMMA))
				Consume(TokenKind::COMMA, TEXT("Expect ',' after enum item."));
		}

		Consume(TokenKind::RBRACE, TEXT("Expect '}' at the end of the 'enum' stmt."));

		enumStmt->enumItems = items;

		return enumStmt;
	}

	Decl *Parser::ParseModuleDecl()
	{
		auto token = Consume(TokenKind::MODULE, TEXT("Expect 'module' keyword."));

		auto moduleDecl = new ModuleDecl(token);

		moduleDecl->name = (IdentifierExpr *)ParseIdentifierExpr();

		Consume(TokenKind::LBRACE, TEXT("Expect '{' after module name."));

		while (!IsMatchCurToken(TokenKind::RBRACE))
		{
			switch (GetCurToken()->kind)
			{
			case TokenKind::LET:
			case TokenKind::CONST:
				moduleDecl->varItems.emplace_back((VarDecl *)ParseVarDecl());
				break;
			case TokenKind::FUNCTION:
				GetCurTokenAndStepOnce();
				moduleDecl->functionItems.emplace_back((FunctionDecl *)ParseFunctionDecl());
				break;
			case TokenKind::CLASS:
				moduleDecl->classItems.emplace_back((ClassDecl *)ParseClassDecl());
				break;
			case TokenKind::ENUM:
				moduleDecl->enumItems.emplace_back((EnumDecl *)ParseEnumDecl());
				break;
			case TokenKind::MODULE:
				moduleDecl->moduleItems.emplace_back((ModuleDecl *)ParseModuleDecl());
				break;
			default:
				REALSIX_LOG_ERROR_WITH_LOC(GetCurToken(), TEXT("Only let,const,function,class,enum and module is available in module scope"));
			}
		}

		Consume(TokenKind::RBRACE, TEXT("Expect '}'."));

		return moduleDecl;
	}

	Stmt *Parser::ParseDeclAndStmt()
	{
		Stmt *result = ParseDecl();
		if (!result)
			result = ParseStmt();
		return result;
	}

	Stmt *Parser::ParseStmt()
	{
		switch (GetCurToken()->kind)
		{
		case TokenKind::RETURN:
			return ParseReturnStmt();
		case TokenKind::IF:
			return ParseIfStmt();
		case TokenKind::LBRACE:
			return ParseScopeStmt();
		case TokenKind::WHILE:
			return ParseWhileStmt();
		case TokenKind::FOR:
			return ParseForStmt();
		case TokenKind::BREAK:
			return ParseBreakStmt();
		case TokenKind::CONTINUE:
			return ParseContinueStmt();
		case TokenKind::SWITCH:
			return ParseSwitchStmt();
		default:
			return ParseExprStmt();
		}
	}

	Stmt *Parser::ParseExprStmt()
	{
		auto exprStmt = new ExprStmt(GetCurToken());
		exprStmt->expr = ParseExpr();

		Consume(TokenKind::SEMICOLON, TEXT("Expect ';' after expr stmt."));
		return exprStmt;
	}

	Stmt *Parser::ParseReturnStmt()
	{
		auto returnStmt = new ReturnStmt(GetCurToken());

		Consume(TokenKind::RETURN, TEXT("Expect 'return' key word."));

		if (!IsMatchCurToken(TokenKind::SEMICOLON))
		{
			std::vector<Expr *> returnExprs;
			do
			{
				if (IsMatchCurToken(TokenKind::SEMICOLON))
					break;

				returnExprs.emplace_back(ParseExpr());

			} while (IsMatchCurTokenAndStepOnce(TokenKind::COMMA));

			if (returnExprs.size() > 1)
				returnStmt->expr = new AppregateExpr(returnExprs[0]->tagToken, returnExprs);
			else if (returnExprs.size() == 1)
				returnStmt->expr = returnExprs[0];
		}

		Consume(TokenKind::SEMICOLON, TEXT("Expect ';' after return stmt"));
		return returnStmt;
	}

	Stmt *Parser::ParseIfStmt()
	{
		auto ifStmt = new IfStmt(GetCurToken());

		Consume(TokenKind::IF, TEXT("Expect 'if' key word."));
		Consume(TokenKind::LPAREN, TEXT("Expect '(' after 'if'."));

		ifStmt->condition = ParseExpr();

		Consume(TokenKind::RPAREN, TEXT("Expect ')' after if condition"));

		ifStmt->thenBranch = ParseStmt();

		if (IsMatchCurTokenAndStepOnce(TokenKind::ELSE))
			ifStmt->elseBranch = ParseStmt();

		return ifStmt;
	}

	Stmt *Parser::ParseScopeStmt()
	{
		auto scopeStmt = new ScopeStmt(GetCurToken());

		Consume(TokenKind::LBRACE, TEXT("Expect '{'."));
		while (!IsMatchCurToken(TokenKind::RBRACE))
			scopeStmt->stmts.emplace_back(ParseDeclAndStmt());
		Consume(TokenKind::RBRACE, TEXT("Expect '}'."));
		return scopeStmt;
	}

	Stmt *Parser::ParseWhileStmt()
	{
		auto whileStmt = new WhileStmt(GetCurToken());

		Consume(TokenKind::WHILE, TEXT("Expect 'while' keyword."));
		Consume(TokenKind::LPAREN, TEXT("Expect '(' after 'while'."));

		whileStmt->condition = ParseExpr();

		Consume(TokenKind::RPAREN, TEXT("Expect ')' after while stmt's condition."));

		if (IsMatchCurToken(TokenKind::LBRACE)) // scope stmt:while(a<10){a=a+1;}
			whileStmt->body = (ScopeStmt *)ParseScopeStmt();
		else // single stmt:while(a<10) a=a+1;
		{
			auto scopeStmt = new ScopeStmt(GetCurToken());
			scopeStmt->stmts.emplace_back(ParseStmt());
			whileStmt->body = scopeStmt;
		}

		return whileStmt;
	}

	Stmt *Parser::ParseForStmt()
	{
		// for(let i=0,j=0;i<10&&j<10;i=i+1,j=j+1)
		//{
		//	...
		// }
		//  |
		//  |
		//  v
		//{
		//		let i=0,j=0;
		//		while(i<10&&j<10)
		//		{
		//			{
		//				...
		//			}
		//			increment part:
		//			{
		//				i=i+1;
		//				j=j+1;
		//			}
		//		}
		// }

		auto token = GetCurToken();

		auto scopeStmt = new ScopeStmt(token);

		Consume(TokenKind::FOR, TEXT("Expect 'for' keyword."));
		Consume(TokenKind::LPAREN, TEXT("Expect '(' after 'for'."));

		// initializer
		if (IsMatchCurToken(TokenKind::LET) || IsMatchCurToken(TokenKind::CONST))
			scopeStmt->stmts.emplace_back(ParseVarDecl());
		else
		{
			if (!IsMatchCurToken(TokenKind::SEMICOLON))
			{
				do
				{
					scopeStmt->stmts.emplace_back(new ExprStmt(GetCurToken(), ParseExpr()));
				} while (IsMatchCurTokenAndStepOnce(TokenKind::COMMA));
			}
			Consume(TokenKind::SEMICOLON, TEXT("Expect ';' after for stmt's initializer stmt"));
		}

		Expr *condition = nullptr;
		if (!IsMatchCurToken(TokenKind::SEMICOLON))
			condition = ParseExpr();
		Consume(TokenKind::SEMICOLON, TEXT("Expect ';' after for stmt's condition expr."));

		std::vector<Expr *> increment;
		auto incrementToken = GetCurToken();
		if (!IsMatchCurToken(TokenKind::RPAREN))
		{
			do
			{
				increment.emplace_back(ParseExpr());
			} while (IsMatchCurTokenAndStepOnce(TokenKind::COMMA));
		}
		Consume(TokenKind::RPAREN, TEXT("Expect ')' after for stmt's increment expr(s)"));
		auto scopeToken = GetCurToken();
		std::vector<Stmt *> whileBodyStmts;
		if (IsMatchCurToken(TokenKind::LBRACE)) // scope stmt for 'for' stmt:like for(a=0;a<10;a=a+1){println("{}",a);}
			whileBodyStmts.emplace_back(ParseScopeStmt());
		else // single stmt for 'for' stmt:like for(a=0;a<10;a=a+1) println("{}",a);
		{
			auto scopeStmt = new ScopeStmt(scopeToken);
			scopeStmt->stmts.emplace_back(ParseStmt());
			whileBodyStmts.emplace_back(scopeStmt);
		}

		auto whileStmt = new WhileStmt(token);
		whileStmt->condition = condition;
		whileStmt->body = new ScopeStmt(scopeToken, whileBodyStmts);
		std::vector<Stmt *> incrementStmts;
		for (const auto expr : increment)
			incrementStmts.emplace_back(new ExprStmt(expr->tagToken, expr));
		whileStmt->increment = new ScopeStmt(incrementToken, incrementStmts);
		scopeStmt->stmts.emplace_back(whileStmt);

		return scopeStmt;
	}

	Stmt *Parser::ParseBreakStmt()
	{
		auto breakStmt = new BreakStmt(GetCurToken());

		Consume(TokenKind::BREAK, TEXT("Expect 'break' keyword."));
		Consume(TokenKind::SEMICOLON, TEXT("Expect ';' after 'break' keyword."));
		return breakStmt;
	}

	Stmt *Parser::ParseContinueStmt()
	{
		auto continueStmt = new ContinueStmt(GetCurToken());

		Consume(TokenKind::CONTINUE, TEXT("Expect 'continue' keyword"));
		Consume(TokenKind::SEMICOLON, TEXT("Expect ';' after 'continue' keyword."));
		return continueStmt;
	}

	Stmt *Parser::ParseSwitchStmt()
	{
		auto ifStmt = new IfStmt(GetCurToken());

		Consume(TokenKind::SWITCH, TEXT("Expect 'switch' keyword."));
		Consume(TokenKind::LPAREN, TEXT("Expect '(' after 'switch' keyword."));

		auto switchExpr = ParseIdentifierExpr();
